--- a/src/main.scss
+++ b/src/main.scss
@@ -2,10 +2,6 @@
 $roboto-font-path: "~materialize-css/dist/fonts/roboto/";
 @import "../node_modules/materialize-css/sass/materialize";
 
-.card {
-    cursor: pointer;
-}
-
 
 .full-height {
     height: 100%;
@@ -13,6 +9,14 @@ $roboto-font-path: "~materialize-css/dist/fonts/roboto/";
 
 body, html, #app, main{
     @extend .full-height;
+}
+
+#app {
+    min-width: 620px;
+}
+
+.card {
+    cursor: pointer;
 }
 
 
