--- a/src/main.scss
+++ b/src/main.scss
@@ -7,7 +7,7 @@ $roboto-font-path: "~materialize-css/dist/fonts/roboto/";
     height: 100%;
 }
 
-body, html, #app, main{
+body, html, #app, main, .with-loader{
     @extend .full-height;
 }
 
@@ -17,15 +17,35 @@ body, html, #app, main{
 
 .card {
     cursor: pointer;
-}
 
+}
 
 textarea {
     height: 500px;
 }
 
+.loading-wrapper {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    cursor: pointer;
+    z-index: 1000;
+    background-color: rgba(0, 0, 0, 0);
+    .loader {
+        display: block;
+        position: absolute;
+        z-index: 100;
+        left: 50%;
+        top: 50%;
+        margin-left: -25px;
+        margin-top: -25px;
+    }
 
-
+}
 
 
 
