--- a/src/main.scss
+++ b/src/main.scss
@@ -7,7 +7,7 @@ $roboto-font-path: "~materialize-css/dist/fonts/roboto/";
     height: 100%;
 }
 
-body, html, #app, main, .with-loader{
+body, html, #app, main{
     @extend .full-height;
 }
 
@@ -23,6 +23,7 @@ body, html, #app, main, .with-loader{
 textarea {
     height: 500px;
 }
+
 
 .loading-wrapper {
     position: fixed;
